# HTracker

./: README.md
hZics/: .gitignore  README.md  hZics.cabal  sendSMS.py  sendSMS.sh
hZics/app/: Main.hs
hZics/app/libs/: Banners.hs  TrackIt.hs  Utils.hs
hZics/bytestrings/: 00.txt  01.txt  02.txt  03.txt  04.txt
