cabal-version:      2.4
name:               hZics
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tknott95
maintainer:         @Cardanymouz
-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hZics
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Colors,
      Banners,
      TrackIt,
      Utils

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: 
      process,
      directory,
      bytestring,
      async,
      aeson,
      http-conduit,
      base ^>=4.14.3.0
    hs-source-dirs:   
      app,
      app/libs
  
    -- threading for future conc for multiple tracks at once
    ghc-options: +RTS -N -RTS -threaded -O2
    default-language: Haskell2010
